# FEUP-CAL

./: README.md
P1/cal_fp01_CLion/TP1/: ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
P1/cal_fp01_CLion/cal_fp01_CLion/TP1/: ex1.cpp  ex2.cpp
P2/: CMakeLists.txt
P2/TP2/: CMakeLists.txt  ex2.cpp  ex3.cpp  exercises.h  main.cpp
P3/: CMakeLists.txt
P3/TP3/: ex1.cpp  ex2.cpp
P4/: CMakeLists.txt
P4/TP4/: ex1.cpp
P5/TP5/: Graph.h
P6/: CMakeLists.txt
P6/TP6/: Graph.h
P7/: CMakeLists.txt
Praticas/: CMakeLists.txt
Praticas/TP1/: ex4.cpp  ex6.cpp
Praticas/TP2/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  exercises.h
Praticas/TP3/: ex1.cpp  ex2.cpp
Praticas/TP4/: ex1.cpp  ex2.cpp  ex3.cpp
Praticas/TP5/: Graph.h  ex1.cpp  ex2.cpp
Praticas/TP6/: Graph.h  MutablePriorityQueue.h
Praticas/TP7_graphviewer/: ex1.cpp
Praticas/TP9/: Graph.h
Projecto/teste/: CMakeLists.txt  Graph.h  main.cpp
Práticas/: main.cpp
Práticas/TP2/: ex2.cpp
Práticas/TP5/: Graph.h
Práticas/TP6/: Graph.h
Práticas/TP7/: Graph.h
